add migrations and repository

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 SRV_PORT=8000
+
+PG_DBNAME="postgres"
+PG_USER="postgres"
+PG_PASSWORD="top_secret"
+PG_PORT=5432
+PG_URL="postgresql://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
