add nats, sending changes to nats, service-collector which stores events and prepares them to sending into Clickhouse

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ PG_USER="postgres"
 PG_PASSWORD="top_secret"
 PG_PORT=5432
 PG_URL="postgresql://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
+
+NATS_PORT=4222
+NATS_GOODS_TOPIC="events.goods.changed"
+
+# How many events will be stacked before writing into Clickhouse
+COLLECTOR_PACK_SIZE=4 
