--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ volumes:
   pg_main:
 
 services:
-  kub_pg:
+  database:
     image: postgres
     environment:
       POSTGRES_DB: ${PG_DBNAME}
@@ -22,5 +22,14 @@ services:
       - pg_main:/var/lib/postgresql/data
     ports:
       - ${PG_PORT}:${PG_PORT}
+    networks:
+      - local
+
+  nats:
+    image: nats:latest
+    ports:
+      - ${NATS_PORT}:${NATS_PORT}
+      - "8222:8222"
+    restart: unless-stopped
     networks:
       - local
