--- a/.env
+++ b/.env
@@ -1,13 +1,18 @@
+ROOT_USER="root"
+ROOT_PASSWORD=1234
+
 SRV_PORT=8000
 
 PG_DBNAME="postgres"
 PG_USER="postgres"
-PG_PASSWORD="top_secret"
 PG_PORT=5432
-PG_URL="postgresql://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
+PG_URL="postgresql://${PG_USER}:${ROOT_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
 
 NATS_PORT=4222
 NATS_GOODS_TOPIC="events.goods.changed"
+
+CLICKHOUSE_PORT=9000
+CLICKHOUSE_DB="main"
 
 # How many events will be stacked before writing into Clickhouse
 COLLECTOR_PACK_SIZE=4 
