--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,19 +4,21 @@ networks:
 
 volumes:
   pg_main:
+  clickhouse-data:
+  grafana-data:
 
 services:
   database:
     image: postgres
     environment:
       POSTGRES_DB: ${PG_DBNAME}
-      POSTGRES_USER: ${PG_USER}
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_USER: ${ROOT_USER}
+      POSTGRES_PASSWORD: ${ROOT_PASSWORD}
       PGPORT: ${PG_PORT}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 1s
-      timeout: 1s
+      test: ["CMD-SHELL", "pg_isready -U ${ROOT_USER} -d ${PG_DBNAME}"]
+      interval: 5s
+      timeout: 5s
       retries: 5
     volumes:
       - pg_main:/var/lib/postgresql/data
@@ -25,11 +27,57 @@ services:
     networks:
       - local
 
+  clickhouse:
+    image: clickhouse/clickhouse-server:latest
+    environment:
+      CLICKHOUSE_USER: ${ROOT_USER}
+      CLICKHOUSE_PASSWORD: ${ROOT_PASSWORD}
+      CLICKHOUSE_DB: ${CLICKHOUSE_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "wget --spider -q http://localhost:8123 || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    ports:
+      - "8123:8123"
+      - ${CLICKHOUSE_PORT}:${CLICKHOUSE_PORT}
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+    networks:
+      - local
+
   nats:
     image: nats:latest
     ports:
       - ${NATS_PORT}:${NATS_PORT}
       - "8222:8222"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "${NATS_PORT}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    depends_on:
+      clickhouse:
+        condition: service_healthy
     restart: unless-stopped
+    networks:
+      - local
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    depends_on:
+      clickhouse:
+        condition: service_healthy
+    environment:
+      GF_SECURITY_ADMIN_USER: ${ROOT_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${ROOT_PASSWORD}
+    volumes:
+      - grafana-data:/var/lib/grafana
     networks:
       - local
