add redis and invalidation

--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@ ROOT_PASSWORD=1234
 SRV_PORT=8000
 
 PG_DBNAME="postgres"
-PG_USER="postgres"
 PG_PORT=5432
-PG_URL="postgresql://${PG_USER}:${ROOT_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
+PG_URL="postgresql://${ROOT_USER}:${ROOT_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
+
+REDIS_PORT=6379
+CACHE_EXPIRATION=60 # In seconds
 
 NATS_PORT=4222
 NATS_GOODS_TOPIC="events.goods.changed"
