dockerize, tried to add migrator

--- a/.env
+++ b/.env
@@ -4,17 +4,28 @@ ROOT_PASSWORD=1234
 SRV_PORT=8000
 
 PG_DBNAME="postgres"
+PG_HOST="database"
 PG_PORT=5432
 PG_URL="postgresql://${ROOT_USER}:${ROOT_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable"
 
+REDIS_HOST="redis"
 REDIS_PORT=6379
+REDIS_URL="${REDIS_HOST}:${REDIS_PORT}"
 CACHE_EXPIRATION=60 # In seconds
 
+NATS_HOST="nats"
 NATS_PORT=4222
+NATS_URL="nats://${NATS_HOST}:${NATS_PORT}"
 NATS_GOODS_TOPIC="events.goods.changed"
 
+CLICKHOUSE_HOST="clickhouse"
 CLICKHOUSE_PORT=9000
 CLICKHOUSE_DB="main"
+CLICKHOUSE_URL="${CLICKHOUSE_HOST}:${CLICKHOUSE_PORT}"
 
 # How many events will be stacked before writing into Clickhouse
 COLLECTOR_PACK_SIZE=4 
+
+# Migrations
+GOOSE_DBSTRING=postgres://${ROOT_USER}:${ROOT_PASSWORD}@${PG_HOST}:${PG_PORT}/${PG_DBNAME}?sslmode=disable
+GOOSE_CLICKHOUSE_DBSTRING=clickhouse://${ROOT_USER}:${ROOT_PASSWORD}@${CLICKHOUSE_HOST}:${CLICKHOUSE_PORT}/${CLICKHOUSE_DB}
